--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@supports (-webkit-overflow-scrolling: touch) {
+  /* CSS specific to iOS devices */ 
+}
+
+@supports not (-webkit-overflow-scrolling: touch) {
+  /* CSS for other than iOS devices */ 
+}
+
+
 body{
     width: 100%;
     height: 100vh;
