--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-@supports (-webkit-overflow-scrolling: touch) {
-  /* CSS specific to iOS devices */ 
-}
-
-@supports not (-webkit-overflow-scrolling: touch) {
-  /* CSS for other than iOS devices */ 
-}
-
-
 body{
     width: 100%;
     height: 100vh;
@@ -26,87 +17,91 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    .wrap{
-        width: 340px;
-        height: 520px;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        .display{
-            width: 340px;
-            height: 50px;
-            background-color: white;
-            margin-top: 30px;
-            border-radius: 10px;
-            position: relative;
-            overflow: hidden;
-            &.shakeAnimate{
-                /* &. -> Cach de trinh duyet hieu ham display co class shakeAnimate thuoc pham vi cua trc khi goi vao bang js */
-                animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
-                /* cubic-bezier la mot ham cs kha nang ve duong cong toc do (Giong ben capcut hay lam) */
-                transform: translate3d(0,0,0);
-            }
-    
-            &.jump{
-                animation: jump 0.5s cubic-bezier(.36,.07,.19,.97) both;
-                transform: translate3d(0,0,0);
-            }
-            #result{
-                position: absolute;
-                font-family: monospace;
-                margin: 0;
-                top: 15px;
-                right: 20px;
-                font-size: 20px;
-                white-space: nowrap; /* Cach nay hay ne =)))))))) */
-            }
-        }
-
-        .keyboard{
-            width: 340px;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            gap: 7px;
-            .line{
-                width: 100%;
-                margin: 0 auto;
-                display: flex;
-                justify-content: center;
-                gap: 12px;
-                button{
-                    width: 75px;
-                    height: 75px;
-                    border-radius: 50%;
-                    border: none;
-                    text-align: center;
-                    align-content: center;
-                    background-color: rgb(50, 50, 50);
-                    font-size: 24px;
-                    color: white;
-                    font-family: monospace;
-                }
-                button:hover{
-                    transform: scale(1.08);
-                    transition: all 0.2s ease;
-                }
-                button:active{
-                    transform: scale(1.0);
-                    opacity: 0.5;
-                }
-                #func-btn{
-                    background-color: rgb(124, 124, 124);
-                }
-                #calcu-btn{
-                    background-color: rgb(255, 136, 17);
-                }
-                .backspace{
-                    font-size: 40px;
-                }
-            }
-        }
-    }
 }
+
+.wrap{
+    width: 340px;
+    height: 520px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.display{
+    width: 340px;
+    height: 50px;
+    background-color: white;
+    margin-top: 30px;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+#result{
+    position: absolute;
+    font-family: monospace;
+    margin: 0;
+    top: 15px;
+    right: 20px;
+    font-size: 20px;
+    white-space: nowrap; /* Cach nay hay ne =)))))))) */
+}
+.display.shakeAnimate{
+    /* &. -> Cach de trinh duyet hieu ham display co class shakeAnimate thuoc pham vi cua trc khi goi vao bang js */
+    animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+    /* cubic-bezier la mot ham cs kha nang ve duong cong toc do (Giong ben capcut hay lam) */
+    transform: translate3d(0,0,0);
+}
+
+.display.jump{
+    animation: jump 0.5s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0,0,0);
+}
+
+.keyboard{
+    width: 340px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 7px;
+}
+
+.line{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+button{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    border: none;
+    text-align: center;
+    align-content: center;
+    background-color: rgb(50, 50, 50);
+    font-size: 24px;
+    color: white;
+    font-family: monospace;
+}
+button:hover{
+    transform: scale(1.08);
+    transition: all 0.2s ease;
+}
+button:active{
+    transform: scale(1.0);
+    opacity: 0.5;
+}
+#func-btn{
+    background-color: rgb(124, 124, 124);
+}
+#calcu-btn{
+    background-color: rgb(255, 136, 17);
+}
+.backspace{
+    font-size: 40px;
+}
+
+
 
 @keyframes shake{
     10%, 90% {
