--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;  
+    min-height: 100svh;
     display: flex;
     justify-content: center;
     align-items: center;
