--- a/safariSupport.css
+++ b/safariSupport.css
@@ -5,15 +5,19 @@
 * Browsers: last 4 version
 */
 
-/* Safari */
-_:lang(x)+_:-webkit-full-screen-document, .selector {
-    body{
+body{
     width: 100%;
     min-height: 100vh;  
     min-height: 100svh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     background-color: rgb(255, 255, 255);
 }
@@ -22,18 +26,30 @@ _:lang(x)+_:-webkit-full-screen-document, .selector {
     width: 368px;
     height: 540px;
     background-color: rgb(16, 16, 16);
-    box-shadow: 4px 4px 10px rgb(100, 100, 100);
+    -webkit-box-shadow: 4px 4px 10px rgb(100, 100, 100);
+            box-shadow: 4px 4px 10px rgb(100, 100, 100);
     border-radius: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .wrap{
     width: 340px;
     height: 520px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 20px;
 }
 .display{
@@ -56,29 +72,44 @@ _:lang(x)+_:-webkit-full-screen-document, .selector {
 }
 .display.shakeAnimate{
     /* &. -> Cach de trinh duyet hieu ham display co class shakeAnimate thuoc pham vi cua trc khi goi vao bang js */
-    animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+    -webkit-animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+            animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
     /* cubic-bezier la mot ham cs kha nang ve duong cong toc do (Giong ben capcut hay lam) */
-    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
 }
 
 .display.jump{
-    animation: jump 0.5s cubic-bezier(.36,.07,.19,.97) both;
-    transform: translate3d(0,0,0);
+    -webkit-animation: jump 0.5s cubic-bezier(.36,.07,.19,.97) both;
+            animation: jump 0.5s cubic-bezier(.36,.07,.19,.97) both;
+    -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
 }
 
 .keyboard{
     width: 340px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 7px;
 }
 
 .line{
     width: 100%;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 12px;
 }
 button{
@@ -87,18 +118,25 @@ button{
     border-radius: 50%;
     border: none;
     text-align: center;
-    align-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
     background-color: rgb(50, 50, 50);
     font-size: 24px;
     color: white;
     font-family: monospace;
 }
 button:hover{
-    transform: scale(1.08);
+    -webkit-transform: scale(1.08);
+        -ms-transform: scale(1.08);
+            transform: scale(1.08);
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
 }
 button:active{
-    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+        -ms-transform: scale(1.0);
+            transform: scale(1.0);
     opacity: 0.5;
 }
 #func-btn{
@@ -113,30 +151,72 @@ button:active{
 
 
 
-@keyframes shake{
+@-webkit-keyframes shake{
     10%, 90% {
-        transform: translate3d(-1px, 0, 0);
+        -webkit-transform: translate3d(-1px, 0, 0);
+                transform: translate3d(-1px, 0, 0);
     }
     20%, 80% {
-        transform: translate3d(2px, 0, 0);
+        -webkit-transform: translate3d(2px, 0, 0);
+                transform: translate3d(2px, 0, 0);
     }
     30%, 50%, 70% {
-        transform: translate3d(-4px, 0, 0);
+        -webkit-transform: translate3d(-4px, 0, 0);
+                transform: translate3d(-4px, 0, 0);
     }
     40%, 60% {
-        transform: translate3d(4px, 0, 0);
+        -webkit-transform: translate3d(4px, 0, 0);
+                transform: translate3d(4px, 0, 0);
+    }
+}
+
+
+
+@keyframes shake{
+    10%, 90% {
+        -webkit-transform: translate3d(-1px, 0, 0);
+                transform: translate3d(-1px, 0, 0);
+    }
+    20%, 80% {
+        -webkit-transform: translate3d(2px, 0, 0);
+                transform: translate3d(2px, 0, 0);
+    }
+    30%, 50%, 70% {
+        -webkit-transform: translate3d(-4px, 0, 0);
+                transform: translate3d(-4px, 0, 0);
+    }
+    40%, 60% {
+        -webkit-transform: translate3d(4px, 0, 0);
+                transform: translate3d(4px, 0, 0);
+    }
+}
+
+@-webkit-keyframes jump{
+    0%, 100%{
+        -webkit-transform: translateY(0px);
+                transform: translateY(0px);
+    }
+    30%{
+        -webkit-transform: translateY(-5px);
+                transform: translateY(-5px);
+    }
+    60%{
+        -webkit-transform: translateY(2px);
+                transform: translateY(2px);
     }
 }
 
 @keyframes jump{
     0%, 100%{
-        transform: translateY(0px);
+        -webkit-transform: translateY(0px);
+                transform: translateY(0px);
     }
     30%{
-        transform: translateY(-5px);
+        -webkit-transform: translateY(-5px);
+                transform: translateY(-5px);
     }
     60%{
-        transform: translateY(2px);
+        -webkit-transform: translateY(2px);
+                transform: translateY(2px);
     }
-}
 }
